-----------------
NEW
* added TMB version of mvmscjs in mvmscjs_tmb R code and mvmscjs_tmb.cpp code. It is an order of magnitude faster than ADMB code for the sealion example. For this model, the default method is nlminb for optimization because it performs better in general.  Setting method can over-ride the default.

* added model MSLD for multistate live recapture and dead recovery in TMB.

BUG FIXES

* In mvmscjs the parameters were not in the correct order so the admb code did not work with the sealions example because the hessian was not in the expected order.  Thanks to Jaume Forcada for reporting the problem.

* fixed bug in make.design.data that was preventing use of newdata in predict.crm and using subtract.stratum for some models.

CHANGES

* for models hmmmscjs and mscjs, all parameter values can be fixed (eg, ddl$p$fix=1). Previously this resulted in R errors.

* in crm.wrapper with external=TRUE, if file already exists code will be stopped unless new argument replace=TRUE is specified.

* Change was made in create.dmdf. For model mvmscjs, previously if there were no uncertain states, the design data for delta was set to NULL.  This doesn't work with the admb code so the design data is created and to make all states certain you need to set fix=1 for all records in the design data. The example for mstrata has been expanded to indclude a model for straight multistate data without uncertainty that uses admb code for mvmscjs.

* code in simplify_ddl was modified to use package data.table which substantially sped up the simplification of the ddl for any given model.

* in global_decode, if ddl is not specified and list of dmat, gamma, delta matrices are in object$results$mat it will use those values.

* added argument useHess to TMB versions of code; if TRUE uses hessian in optimization.  This is typically slower but can be more precise in finding max.

* default value for save.matrices has been changed to FALSE for HMM and MVMS models.
