@@ -39,5 +39,5 @@ SystemRequirements: ADMB version 11 <http://admb-project.org/> for
     use.admb=TRUE; see readme.txt
 LazyLoad: yes
 License: GPL (>=2)
-RoxygenNote: 6.1.0.9000
+RoxygenNote: 6.1.1
 Encoding: UTF-8
