@@ -42,6 +42,7 @@ export(ms_dmat)
 export(ms_gamma)
 export(mscjs)
 export(mscjs_tmb)
+export(msld_tmb)
 export(mvms_design_data)
 export(mvms_dmat)
 export(mvmscjs)
