@@ -242,15 +242,24 @@ mscjs_tmb=function(x,ddl,fullddl,dml,model_data=NULL,parameters,accumulate=TRUE,
 		convergence=mod$convergence
 	} else
 	{
-		control$starttests=FALSE
-		if(!useHess)
-		   mod=optimx(f$par,f$fn,f$gr,hessian=FALSE,control=control,itnmax=itnmax,method=method,...)
-		else
-		  mod=optimx(f$par,f$fn,f$gr,f$he,hessian=FALSE,control=control,itnmax=itnmax,method=method,...)
-		par <- coef(mod, order="value")[1, ]
-		mod=as.list(summary(mod, order="value")[1, ])
+	  if(method=="SANN")
+	  {		  
+	    control$maxit=itnmax
+	    mod=optim(f$par,f$fn,hessian=FALSE,control=control,itnmax=itnmax,method=method,...)
+	    par=mod$par
+	    convergence=mod$convergence
+	  } else
+	  {
+	    control$starttests=FALSE
+ 		  if(!useHess)
+		     mod=optimx(f$par,f$fn,f$gr,hessian=FALSE,control=control,itnmax=itnmax,method=method,...)
+		  else
+		     mod=optimx(f$par,f$fn,f$gr,f$he,hessian=FALSE,control=control,itnmax=itnmax,method=method,...)
+		  par <- coef(mod, order="value")[1, ]
+		  mod=as.list(summary(mod, order="value")[1, ])
 	    convergence=mod$convcode
-		lnl=mod$value		
+	  }
+	  lnl=mod$value
 	}
 	fixed.npar=ncol(phidm)+ncol(pdm)+ncol(psidm)
 	
