@@ -348,7 +348,7 @@ msld_tmb=function(x,ddl,fullddl,dml,model_data=NULL,parameters,accumulate=TRUE,i
 		if(hessian) 
 		{
 			message("Computing hessian...")
-			beta.vcv=solve(f$he(par))
+			beta.vcv=solvecov(f$he(par))$inv
 			colnames(beta.vcv)=names(unlist(cjs.beta))
 			rownames(beta.vcv)=colnames(beta.vcv)
 		} else
