@@ -1,15 +1,15 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/mscjs_tmb.r
-\name{mscjs_tmb}
-\alias{mscjs_tmb}
-\title{Fitting function for Multistate CJS models with TMB}
+% Please edit documentation in R/msld_tmb.r
+\name{msld_tmb}
+\alias{msld_tmb}
+\title{Fitting function for Multistate CJS live-dead models with TMB}
 \usage{
-mscjs_tmb(x, ddl, fullddl, dml, model_data = NULL, parameters,
+msld_tmb(x, ddl, fullddl, dml, model_data = NULL, parameters,
   accumulate = TRUE, initial = NULL, method, hessian = FALSE,
   debug = FALSE, chunk_size = 1e+07, refit, itnmax = NULL,
   control = NULL, scale, re = FALSE, compile = FALSE,
-  extra.args = "", clean = TRUE, getreals = FALSE, useHess = FALSE,
-  ...)
+  extra.args = "", clean = FALSE, getreals = FALSE,
+  useHess = FALSE, ...)
 }
 \arguments{
 \item{x}{processed dataframe created by process.data}
@@ -24,14 +24,14 @@ mscjs_tmb(x, ddl, fullddl, dml, model_data = NULL, parameters,
 formula and design data}
 
 \item{model_data}{a list of all the relevant data for fitting the model including
-imat, S.dm,p.dm,Psi.dm,S.fixed,p.fixed,Psi.fixed and time.intervals. It is used to save values
+imat, S.dm,r.dm,p.dm,Psi.dm,S.fixed,r.fixed,p.fixed,Psi.fixed and time.intervals. It is used to save values
 and avoid accumulation again if the model was re-rerun with an additional call to cjs when
 using autoscale or re-starting with initial values.  It is stored with returned model object.}
 
 \item{parameters}{equivalent to \code{model.parameters} in \code{\link{crm}}}
 
 \item{accumulate}{if TRUE will accumulate capture histories with common
-value and with a common design matrix all parameters to speed up execution}
+value and with a common design matrix for all parameters speed up execution}
 
 \item{initial}{list of initial values for parameters if desired; if each is a named vector
 from previous run it will match to columns with same name}
@@ -80,13 +80,13 @@ each animal-occasion excluding those that occurred before release}
 }
 \description{
 A function for computing MLEs for a Multi-state Cormack-Jolly-Seber open
-population capture-recapture model for processed dataframe \code{x} with
+population capture-recapture with dead recoveries for processed dataframe \code{x} with
 user specified formulas in \code{parameters} that create list of design
 matrices \code{dml}. This function can be called directly but is most easily
 called from \code{\link{crm}} that sets up needed arguments.
 }
 \details{
-It is easiest to call \code{mscjs_tmb} through the function \code{\link{crm}}.
+It is easiest to call \code{msld_tmb} through the function \code{\link{crm}}.
 Details are explained there.
 }
 \references{
